--- a/index.html
+++ b/index.html
@@ -75,17 +75,22 @@
 <section id="Pic">
         <div class="categories">
         <div class="col-3">
-            <img src="DSC0325-Basilia-Amakuro-768x691-1.jpg" alt="" width="50%" id="One">
+            <img src="IMG_20251120_105456_235.jpg" alt="" width="50%" id="One">
         </div>
 
         <div class="col-3">
             <img src="410760780_122110649954145164_557065536441654090_n-Basilia-Amakuro-768x512-1.jpg" alt=""id="Second">
         </div>
         <div class="col-3">
-            <img src="DSC_3710-Basilia-Amakuro-scaled-1.jpg" alt="" id="Third">          
+            <img src="IMG_20251120_105500_187.jpg" alt="" id="Third">          
         </div>
+        <div class="col-3">
+            <video  width="100%" height="100%" autoplay="autoplay" id="four" controls>
+                <source  src="VID_20251120_105013.mp4">
+            </video>
+            </div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br>
 </section>
 
     <!--------------------------------Our Projects------------------------------------------>
